Fixing z-index in timeline and right bar.

--- a/x-platform/public/dm-xplatform/controllers/dm-xplatform-space/dm-xplatform-space.less
+++ b/x-platform/public/dm-xplatform/controllers/dm-xplatform-space/dm-xplatform-space.less
@@ -40,7 +40,7 @@
   top: 0;
   right: 0;
   position: absolute;
-  z-index: 10;
+  z-index: 9;
 }
 
 .nav > li > .workspace-btn{
