--- a/x-platform/public/dm-xplatform/directives/dm-timeline/dm-timeline.less
+++ b/x-platform/public/dm-xplatform/directives/dm-timeline/dm-timeline.less
@@ -14,6 +14,7 @@ dm-timeline {
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 9;
 
     .progress-bar {
       background-color: darken(#2a9fd6, 35%);
